@@ -1,1 +1,1 @@
-<html><head><title>Mac OS Plugin</title></head><body bgcolor="#FFFFFF"><table    summary="Header"    bgcolor="#99CCCC"    cellspacing="0"    border="0"    width="100%"    cols="2">  <tr width="100%">     <td valign="TOP"><strong><font size="+2">Mac OS Plugin</font></strong></td>    <td valign="TOP" align="RIGHT"><font size="-1"> <strong>Version 2.0.4 (Feb.       23, 2003)</strong> <br>      By Kris Kopicki &lt;krisko@users.sourceforge.net&gt; </font></td>  </tr></table><h3>Provides Mac OS specific features, such as:</h3><ul>  <li>jEdit exits cleanly when using Command-Q or &quot;Quit&quot; from the &quot;File&quot;     menu.</li>  <li>Files created or associated with jEdit can now be opened from the Finder,     by either double-clicking the file's icon or dragging the file's icon onto     the jEdit application icon.</li>  <li>jEdit preserves existing type/creator codes and is assigned as the creator     of new files (Default). Can also be set to ignore existing type/creator codes.</li>  <li>"Preferences..." in the application menu can be used to access jEdit's Global     Options.</li>  <li>"About jEdit..." in the application menu can be used to access the About     Dialog.</li>  <li>The menu's can be placed in the Mac OS X menu bar. This is not recommended,     as there are problems with Java on Mac OS X.</li>  <li>You can enable live resizing of windows.</li>  <li>You can show current and recent buffers in the finder.</li>  <li>You can run AppleScripts (compiled, uncompiled and standalone). Your scripts     must be located in the macros folder in the jEdit folder. They can be either     plain text or compiled scripts. Scripts must have their type and creator set     correctly, have a .scpt (for compiled scripts) or .applescript (for uncompiled     scripts) extension, or both.</li>  <li>The text area can be set to use the system default for highlighting text.</li></ul><h3>Known Issues:</h3><ul>  <li>Files opened in the Finder before jEdit is running are not opened in jEdit     (10.0.x - 10.1.x).</li>  <li>Scripts that require user interaction are not supported.</li></ul><p>&nbsp;</p></body></html>
+<html><head><title>Mac OS Plugin</title></head><body bgcolor="#FFFFFF"><table    summary="Header"    bgcolor="#99CCCC"    cellspacing="0"    border="0"    width="100%"    cols="2">  <tr width="100%">     <td valign="TOP"><strong><font size="+2">Mac OS Plugin</font></strong></td>    <td valign="TOP" align="RIGHT"><font size="-1"> <strong>Version 3.0 (Nov.       16, 2003)</strong> <br>      By Kris Kopicki &lt;krisko@users.sourceforge.net&gt; </font></td>  </tr></table><h3>Provides Mac OS specific features, such as:</h3><ul>  <li>jEdit exits cleanly when using Command-Q or &quot;Quit&quot; from the &quot;File&quot;     menu.</li>  <li>Files created or associated with jEdit can now be opened from the Finder,     by either double-clicking the file's icon or dragging the file's icon onto     the jEdit application icon.</li>  <li>jEdit preserves existing type/creator codes and is assigned as the creator     of new files (Default). Can also be set to ignore existing type/creator codes.</li>  <li>"Preferences..." in the application menu can be used to access jEdit's Global     Options.</li>  <li>"About jEdit..." in the application menu can be used to access the About     Dialog.</li>  <li>The menu's can be placed in the Mac OS X menu bar. This is not recommended,     as there are problems with Java on Mac OS X.</li>  <li>You can enable live resizing of windows.</li>  <li>You can show current and recent buffers in the finder.</li>  <li>You can run AppleScripts (compiled, uncompiled and standalone). Your scripts     must be located in the macros folder in the jEdit folder. They can be either     plain text or compiled scripts. Scripts must have their type and creator set     correctly, have a .scpt (for compiled scripts) or .applescript (for uncompiled     scripts) extension, or both.</li>  <li>The text area can be set to use the system default for highlighting text.</li></ul><h3>Known Issues:</h3><ul>  <li>You will probably experience problems using anything less than Java 1.4</li></ul><p>&nbsp;</p></body></html>
